[project]
name = "comfyui-align-shortcuts"
description = "Shortcuts for aligning nodes."
version = "1.0.3"
license = { file = "LICENSE" }
dependencies  = []

[project.urls]
Repository = "https://github.com/m21-cerutti/comfyui-align-shortcuts"

[tool.comfy]
PublisherId = "m21-cerutti"
DisplayName = "ComfyUI - Align Shortcuts"
Icon = ""
