[project]
name = "comfyui-align-shortcuts"
description = "Shortcuts for aligning nodes."
version = "1.1.2"
license = { file = "LICENSE" }
dependencies  = []

[project.urls]
Repository = "https://github.com/m21-cerutti/comfyui-align-shortcuts"

[tool.comfy]
PublisherId = "m21-cerutti"
DisplayName = "ComfyUI - Align Shortcuts"
Icon = "https://raw.githubusercontent.com/m21-cerutti/comfyui-align-shortcuts/refs/heads/main/assets/logo.svg"
